# neural-polytest

./: .gitignore  Cargo.toml  README.md  jax_train.py  pyproject.toml  train.py
python/neural_polytest/: __init__.py  conversion.py  layers.py
python/neural_polytest/jax/: fft.py  transformer.py
python/neural_polytest/torch/: transformer.py
src/: lib.rs
src/neural_polytest/: layers.py  layers_torch.py
tests/: test_pygfpolynomial.py
