[project]
name = "neural-polytest"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dashiell Stander", email = "dash.stander@gmail.com" }
]
dependencies = [
    "galois>=0.4.3",
    "jax>=0.4.38",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.3.1",
    "ruff>=0.8.4",
    "jupyterlab>=4.3.4",
    "pytest>=8.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["python/neural_polytest"]
