[project]
name = "neural-polytest"
version = "0.1.0"
description = "Polynomial multiplication and identity testing with neural networks"
authors = [
    { name = "Dashiell Stander", email = "dash.stander@gmail.com" }
]
dependencies = [
    "galois>=0.4.3",
    "optax>=0.2.4",
    "wandb>=0.19.1",
    "tqdm>=4.67.1",
    "torch>=2.6.0",
    "transformer-lens>=2.15.0",
    "matplotlib>=3.10.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.3.1",
    "ruff>=0.8.4",
    "jupyterlab>=4.3.4",
    "pytest>=8.3.4",
]

[[tool.rye.sources]]
name = "google-jax"
url = "https://storage.googleapis.com/jax-releases/libtpu_releases.html"
type = "find-links"

[tool.maturin]
python-source = "python"
module-name = "neural_polytest.finite_fields"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["python/neural_polytest"]
